fix(ui): replace custom .iconpadding with Bootstrap me-2 to address icon spacing (#1465)

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -61,11 +61,6 @@
   }
 }
 
-// Add a space after fontawesome icons
-.iconpadding {
-  padding-right: 6px !important;
-}
-
 // Multi-color Google icon for branding compliance
 .fa-google {
   background:
